--- a/ContactMe.html
+++ b/ContactMe.html
@@ -26,6 +26,8 @@
                 </div>
               </div></div>
 
+              <section id="backdrop"></section>
+
         <header>
             
             <div id="logo">
